revise description of dnorm() and pnorm() in ch8

--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -14,7 +14,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8f37cdbc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
@@ -54,7 +58,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "32849c08",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "males <- filter(studentdata, Sex == 'Male')\n",
@@ -107,7 +115,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8c4547cc",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "student_ID <- c(1, 2, 3, 4, 5, 6)\n",
@@ -197,7 +209,10 @@
    "execution_count": null,
    "id": "fe20a722",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -223,7 +238,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e83bb448",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "tiny_sex_model <- lm(Thumb ~ Sex, data = tiny_data)\n",
@@ -247,7 +266,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "79ba99c4",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "tiny_data$Sex <- recode(tiny_data$Sex, \"female\" = \"woman\")\n",
@@ -270,7 +293,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "39392d27",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")\n",
@@ -310,7 +337,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50c0e0ea",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "sex_model$coefficients[1] #this will print out the first coefficient, b0\n",
@@ -334,7 +365,10 @@
    "execution_count": null,
    "id": "b4041251",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -365,7 +399,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "fb7586fb",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "tiny_data$GrandMean <- c(62, 62, 62, 62, 62, 62) #predictions using grand mean\n",
@@ -415,7 +453,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2c224984",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# ANOVA table of an empty model\n",
@@ -450,7 +492,7 @@
    "id": "776847e8",
    "metadata": {},
    "source": [
-    "## 11.8 Improvement over empty model\n",
+    "## 11.7 Improvement over empty model\n",
     "\n",
     "Statistical modeling is all about explaining variation. $SS_{total}$ tells us how much total variation there is to be explained in an outcome variable. When we fit a model (as we have done with the Sex model), that model explains some of the total variation, and leaves some of that variation still unexplained.\n",
     "\n",
@@ -489,7 +531,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b4b5cfee",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "campus_model <- lm(Thumb ~ Campus, data = studentdata)\n",
@@ -518,7 +564,7 @@
    "id": "cd86157c",
    "metadata": {},
    "source": [
-    "## 11.9 A historical note - the t-test\n",
+    "## 11.8 A historical note - the t-test\n",
     "\n",
     "In this course we are relying on the general linear model framework to test our ideas of the data generation process. The main logic of the general linear model is that we can create a (simplified) statistical model that is an estimate of at least a part the of true data generation process, and see whether predictions using that model are more accurate than predictions made using a null model. \n",
     "\n",
