--- a/chapter-8.ipynb
+++ b/chapter-8.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "Over time, statisticians have figured out that the best way to pick a sample that most closely resembles the shape, center, and variability of the target population is to draw a **random sample**. Random in this case means every member of the population has an equal chance of getting picked for the sample. This is usually impractical, though. For a psychologist, it's not as easy to contact, recruit, or even know about some people in the population compared to others (indeed, the data in psychology results are often based on an over-representation of US psychology students, since universities require their psych majors to participate in studies!). For an ecologist, it is much easier to access animals that live in one site nearby, versus the same species that lives in a remote canyon. You can probably think of examples in other fields of study that make it hard to sample every member of the population at equal likelihood.\n",
     "\n",
-    "In addition, it is important to know the difference between **sampling with replacement** and **sampling without replacement.** With replacement means that, after picking a data point out of the entire population for inclusion in the sample, you record its value and then put it back \"into the bag\" of the population, so that it has a chance of being selected again. Without replacement is the opposite - once a data point is recorded, it can't be selected again. In real world data collection, you almost always use sampling without replacement because you want to collect as much unique information in your data as possible. I.e., once someone has participated in your study, you don't let them participate again. However, for some theoretical or simulating procedures that we will do later in this chapter, sampling with replacement is an underlying assumption.\n",
+    "In addition, it is important to know the difference between **sampling with replacement** and **sampling without replacement.** With replacement means that, after picking a data value out of the entire population for inclusion in the sample, you record its value and then put it back \"into the bag\" of the population, so that it has a chance of being selected again. Without replacement is the opposite - once a data value is recorded, it can't be selected again. In real world data collection, you almost always sample individual people without replacement because you want to collect as much unique information in your data as possible. I.e., once someone has participated in your study, you don't let them participate again. However, the *value* they provide to you could come up again for another student. In this way, sampling values from the population of some variable can be considered to be sampling with replacement.\n",
     "\n",
     "Interestingly, even though random sampling is the most representative sampling process, that doesn't always mean the sample you end up with will look exactly like the population, or even other samples. For example, the picture below shows a population of thumb lengths from which several N=100 random samples were drawn:\n",
     "\n",
@@ -269,7 +269,7 @@
     "\n",
     "<img src=\"images/ch8-unidist.png\" width=\"350\">\n",
     "\n",
-    "We can also use some different R functions to access this perfectly shaped distribution without having to generate it ourselves: ```runif()``` and ```dunif().``` The \"unif\" part of the function name is short for the uniform distribution. In the first one, the \"r\" refers to generating a random sample from the uniform distribution, and in the second one, the \"d\" refers to calculating the density (or probability) of a particular value. "
+    "We can also use some different R functions to access this perfectly shaped distribution without having to generate it ourselves: ```runif()``` and ```dunif().``` The \"unif\" part of the function name is short for the uniform distribution. In the first one, the \"r\" refers to generating a random sample from the uniform distribution, and in the second one, the \"d\" refers to calculating the density of the probability distribution at a particular value. "
    ]
   },
   {
@@ -327,7 +327,7 @@
    "id": "7c63cf22",
    "metadata": {},
    "source": [
-    "Where ```runif()``` lets us generate a random sample from the uniform distribution, ```dunif()``` tells us the probability (density) of a specific value. Try using it to calculate the probability of rolling a 4 on a die, given a uniform probability distribution:"
+    "Where ```runif()``` lets us generate a random sample from the uniform distribution, ```dunif()``` tells us the density of the distribution at a specific value. This can help us understand how likely it is to get that value from one random draw from the distribution. Try using it to calculate the density for rolling a 4 on a die, given a uniform probability distribution:"
    ]
   },
   {
@@ -390,7 +390,7 @@
    "id": "45cb1d49",
    "metadata": {},
    "source": [
-    "Now use ```dnorm()``` to figure out how likely it is that you get a value of 2 from this normal distribution:"
+    "Now use ```dnorm()``` to figure out the density of this normal distribution at a value of 2:"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "outputs": [],
    "source": [
     "#change this code to use dnorm() with the same mean and sd\n",
-    "rnorm(n = 1000000, mean = 0, sd = 1)"
+    "dnorm(n = , mean = , sd = )"
    ]
   },
   {
@@ -413,7 +413,7 @@
    "id": "086e9311",
    "metadata": {},
    "source": [
-    "Perhaps the population you want to draw from has more variability, so the standard deviation of your distribution is actually 3. Recalculate the probability of drawing a value of 2 from this new population:"
+    "Perhaps the population you want to draw from has more variability, so the standard deviation of your distribution is actually 3. Recalculate the density of drawing a value of 2 from this new population:"
    ]
   },
   {
@@ -895,7 +895,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.2"
   }
  },
  "nbformat": 4,
