add new concepts and new R functionality sections to ch13 and ch14

--- a/chapter-12.ipynb
+++ b/chapter-12.ipynb
@@ -552,7 +552,7 @@
    "id": "2de884bd",
    "metadata": {},
    "source": [
-    "## 12.9 Correlation\n",
+    "## 12.9 Historical note - Correlation\n",
     "\n",
     "You might have heard of Pearson’s *r*, more commonly referred to as a **correlation coefficient**. It's again another historical tool, usually taught separately from other concepts, but which is actually just a special case of regression in which both the outcome and explanatory variables are standardized as z-scores prior to analysis.\n",
     "\n",
