refine SIR model demo in ch9

--- a/chapter-12.ipynb
+++ b/chapter-12.ipynb
@@ -855,6 +855,7 @@
     "- **correlation coefficient**: Represents the strength of linear association between two quantitative variables. Derived from a regression model with standardized variables. \n",
     "\n",
     "## New R functionality\n",
+    "- [ggformula::gf_lm()](https://www.rdocumentation.org/packages/ggformula/versions/0.10.1/topics/gf_smooth)\n",
     "- [cor()](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/cor)"
    ]
   },
