--- a/chapter-9.ipynb
+++ b/chapter-9.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "In the prior chapter we discussed why a sample of data looks the way it does. One reason is because of the sampling process used and the level of randomness involved, while another reason is the data generation process that led to the shape of the population from which the data came. \n",
     "\n",
-    "To understand the data generation process is to break down what factors create the distribution of a population, and can therefor explain the shape and variation in that population. If we know the data generation process, we can explain why things happen the way they do and anticipate what new data will look like. Because of this, trying to understand the data generation process is perhaps *the* main reason for using statistics in psychology. The majority of this field is dedicated to studying the data generation process for the how the human mind works. Anytime we form a hypothesis about how variables are related to each other (e.g., \"how does income relate to sleep quality?\" or \"are stressed teachers more punative than non-stressed teachers?\"), we are proposing a data generation process. So this is a concept to pay attention to! In this chapter we will discuss how data analysts build ideas about the data generation process using data.\n",
+    "To understand the data generation process is to break down what factors create the distribution of a population, and can therefor explain the shape and variation in that population. If we know the data generation process, we can explain why things happen the way they do and anticipate what new data will look like. Because of this, trying to understand the data generation process is perhaps *the* main reason for using statistics in psychology. The majority of this field is dedicated to studying the data generation process for how the human mind works. Anytime we form a hypothesis about how variables are related to each other (e.g., \"how does income relate to sleep quality?\" or \"are stressed parents more punative than non-stressed parents?\"), we are proposing a data generation process. So this is a concept to pay attention to! In this chapter we will discuss how data analysts build ideas about the data generation process using data.\n",
     "\n",
     "## 9.1 Models\n",
     "\n",
@@ -53,7 +53,7 @@
     "\n",
     "This equation is a model because it describes both the inputs that determine the value of gravitational force (object masses, the distance between them, and a force parameter G), and it describes the relationships between these inputs and the output (multiply the masses together, divide by the square of the distance, multiply all by G).\n",
     "\n",
-    "This model is very accurate. For essentially any two bodies of mass, plugging in the appropriate input values to this model will creat a prediction of gravitational force that matches what actually occurs. Highly accurate models like this, where we fully understand the data generation process and can accurately make predictions of outcomes, are called **deterministic models**. We can *determine* what any output will be just by knowing the input values. "
+    "This model is very accurate. For any two bodies of mass, plugging in the appropriate input values to this model will creat a prediction of gravitational force that matches what actually occurs. Highly accurate models like this, where we fully understand the data generation process and can accurately make predictions of outcomes, are called **deterministic models**. We can *determine* what any output will be just by knowing the input values. "
    ]
   },
   {
@@ -148,7 +148,7 @@
    "source": [
     "According to the predictions of this simulation, based on the infection and recovery rate we provided, this version of a pandemic would go pretty quick - half our population would be sick within three days, but recover quickly. If we were government officials, this would likely inform what public health strategy we chose.  \n",
     "\n",
-    "Take a look back at the code used for this simulation. Where did we define the model inputs, and where did we define how they were related to each other (e.g. the model equation)? Would we have been able to simulate the progression of disease without this information?"
+    "Take a look back at the code used for this simulation. Where did we define the model inputs, and where did we define how they were related to each other (e.g. the model equation)? Try changing these values and rerunning the simulation to see what would happen with different input values. Would we have been able to simulate the progression of disease without about these variables?"
    ]
   },
   {
