add dplyr load to ch8 and ch10 to use magrittr pipe in plotting

--- a/chapter-10.ipynb
+++ b/chapter-10.ipynb
@@ -24,7 +24,9 @@
     "# This chapter uses packages that takes a few minutes to download on Google Colab. \n",
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"ggformula\")\n",
+    "install.packages(\"dplyr\")\n",
     "library(ggformula)\n",
+    "library(dplyr)\n",
     "\n",
     "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")"
    ]
