--- a/chapter-8.ipynb
+++ b/chapter-8.ipynb
@@ -24,7 +24,9 @@
     "# This chapter uses the package ggformula, which takes a few moments to download on Google Colab. \n",
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"ggformula\")\n",
-    "library(ggformula)"
+    "install.packages(\"dplyr\")\n",
+    "library(ggformula)\n",
+    "library(dplyr)"
    ]
   },
   {
