add new concepts and new R functionality sections to ch17

--- a/chapter-16.ipynb
+++ b/chapter-16.ipynb
@@ -833,7 +833,7 @@
     "- **null sampling distribution** - The distribution of sample estimates that could be created from a population where the null hypothesis is true. \n",
     "- **permutation testing** - A type of simulation that randomly shuffles values in a variable in order to remove any association with another variable. Repeating this process approximates the null sampling distribution of an estimate.  \n",
     "- **p-value** - The probability that a particular estimate or something more extreme would happen if the null hypothesis were true.  \n",
-    "- **t-distribution** - The theoretical shape of the null sampling distribution. \n",
+    "- **t-distribution** - The theoretical shape of the null sampling distribution of a model coefficient estimate. \n",
     "- **Type I error** - One commits a Type I error or false positive decision if they reject the null hypothesis when it is in fact the truth. Defined by the significance decision criterion $\\alpha$. \n",
     "- **Type II error** - One commits a Type II error or false negative decision if they fail to reject the null hypothesis when it is not the truth."
    ]
@@ -843,7 +843,7 @@
    "id": "e706c8b2",
    "metadata": {},
    "source": [
-    "[Next: Chapter 17 - Significance Testing with Whole Models](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb)"
+    "[Next: Chapter 17 - Significance Testing Whole Models](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb)"
    ]
   }
  ],
