rewrite ch17 to focus on vuongs test for model selection

--- a/chapter-17.ipynb
+++ b/chapter-17.ipynb
@@ -495,7 +495,7 @@
    "id": "26263b9b",
    "metadata": {},
    "source": [
-    "The section under \"Variance test\" tests the null hypothesis $\\Delta{adjR^2} = 0$. Here p = 0.0388, meaning the models are distinguishable; one model explains outcome variation better than the other model. To see which that is, we move down to the \"likelihood ratio test\" section. Here, we see that Model 1 fits better than Model 2. This function assigned ```full_model``` to Model 1, so therefor we're confident that adding ```respondents_sex``` to the model significantly improves model performance. \n",
+    "The section under \"Variance test\" tests the null hypothesis $\\Delta{adjR^2} = 0$. Here p = 0.0388, meaning the models are distinguishable; one model explains outcome variation better than the other model. To see which that is, we move down to the \"likelihood ratio test\" section. Here, we see that Model 1 fits better than Model 2. This function assigned ```full_model``` to Model 1, so therefor we're confident that adding ```respondents_sex``` to the model significantly improves model performance. If this result had been non-significant, the models' performances would be indistinguishable and thus we should pick the smaller one for parsimony.\n",
     "\n",
     "Below is how to run this test for non-nested data: "
    ]
