--- a/chapter-18.ipynb
+++ b/chapter-18.ipynb
@@ -14,7 +14,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "00f2b2cf",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
@@ -26,7 +30,7 @@
     "\n",
     "#smaller dataset, more similar in size to most psychology studies\n",
     "set.seed(10)\n",
-    "GSS_subset <- sample_n(GSS, 100)"
+    "GSS_subset <- slice_sample(GSS, n=100)"
    ]
   },
   {
@@ -95,7 +99,10 @@
    "execution_count": null,
    "id": "496c0829",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -119,7 +126,10 @@
    "execution_count": null,
    "id": "6bfe2e0b",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -164,7 +174,10 @@
    "execution_count": null,
    "id": "91f2c424",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -198,7 +211,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8e8d03d7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "cor(GSS_subset$highest_year_of_school_completed, GSS_subset$highest_year_school_completed_father,\n",
@@ -240,7 +257,10 @@
    "execution_count": null,
    "id": "aac2c3fb",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -295,7 +315,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e764e670",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")\n",
@@ -435,7 +459,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2ab85f7a",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "install.packages(\"pwr\")\n",
@@ -458,7 +486,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b18604b1",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#Enter values into the arguments below\n",
@@ -478,7 +510,10 @@
    "execution_count": null,
    "id": "bd3b9d58",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "vscode": {
+     "languageId": "r"
+    }
    },
    "outputs": [],
    "source": [
@@ -507,7 +542,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "50dda0df",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "    pwr.f2.test(u=2, v=NULL, f2=0.1, sig.level=0.05, power=0.8)"
