--- a/chapter-17.ipynb
+++ b/chapter-17.ipynb
@@ -372,17 +372,17 @@
     "\n",
     "Testing the significance of a model's $R^2$ estimate lets you test whether or not the model as a whole is likely to perform similarly to the null model - whether or not this $R^2$ estimate likely comes from a world where all the beta estimates are truly 0. It's a test of whether or not we are confident that this model will perform better than nothing. \n",
     "\n",
-    "But that's not the only kind of question we might have about a model. Perhaps instead of a comparison to the null model, we want to make comparisons between different complex models. This process of finding which candidate model is better is called **model selection**. \n",
+    "But that's not the only kind of question we might have about a model. Perhaps instead of a comparison to the null model, we want to make comparisons between different complex models. Consider a situation where we're using the data in the GSS to help us plan a study of our own that will explore factors related to educational attainment. We have a limited budget though, so we want to know if it helps to run a longer survey about multiple predictors (e.g., father's education and respondent's sex) or if just one of those in a shorter survey would work just as well. I.e., does a model with both father education and respondent's sex as predictors perform better than a model with only one?\n",
     "\n",
-    "What process to use for model selection is actually a huge question in statistics without objective answers. This is because it depends on what you mean by a \"better model.\" Is it one that results in less prediction error, or one that is closer to the true data generation process? These different goals can give you different answers for which model to choose, especially in a complex science where measurement error is present and thus a simpler model may propogate less error even if it's farther away from the truth than a more complex model.  \n",
+    "Or in another, say we're curious about whether some predictor is significantly better than another in making predictions on its own. For example, maybe father's education is a better predictor than mother's education. If we use these in two separate models, which model will be better? \n",
+    "\n",
+    "This process of choosing a candidate model among a set of options is called **model selection**. What process to use for model selection is actually a huge question in statistics without objective answers. This is because it depends on what you mean by a \"better model.\" Is it one that results in less prediction error, or one that is closer to the true data generation process? These different goals can give you different answers for which model to choose, especially in a complex science where measurement error is present and thus a simpler model may propogate less error even if it's farther away from the truth than a more complex model.  \n",
     "\n",
     "When your goal is inference, you should first, before testing any data, try to specify a minimal set of candidate models based on theory and interpretability. Choose predictor sets that make sense given what is known about your research area first, and consider what variables are measurable and thus useful for making predictions with. This is because, the more candidate models there are to evaluate, the lower the probability is that you will find the right one in a single research study because of sampling error. \n",
     "\n",
     "When your goal is prediction, considering a large initial set of candidate models (e.g. all possible permutations of collected variables) is justifiable as all you care about is minimizing model error, not finding the truth of the data generation process. But you need a lot of data to be able to make confident evaluations about the differences between the all the models in these cases.  \n",
     "\n",
-    "Even within these goals, there are different model selection tools built on different assumptions about the data and underlying data generation process for judging which model has better performance. The math of these different tools can get pretty complicated, so in this course we will learn in depth about a simulation approach that generalizes to many model selection situations. We will then let you know about other approaches so you can read more about those on your own if you choose. \n",
-    "\n",
-    "Consider a situation where we're using the data in the GSS to help us plan a study of our own that will explore factors related to educational attainment. We have a limited budget though, so we want to know if it helps to run a longer survey about multiple predictors (e.g., father's education and respondent's sex) or if just one of those in a shorter survey would work just as well. I.e., does a model with both father education and respondent's sex as predictors perform *significantly* better than a model with only one?"
+    "Even within these goals, there are different model selection tools built on different assumptions about the data and underlying data generation process for judging which model has better performance. In the simplest case, we might just compare measures of explained error between two models. Try this below by first fitting a model predicting respondent's education with either just father education, or both father education and respondent's sex.  "
    ]
   },
   {
@@ -467,212 +467,13 @@
     "\n",
     "But in this case we can't necessarily use the F-distribution to calculate a p-value for the model differences, because $\\Delta{adjR^2}$ might be positive or negative - model 1 can be better than or worse than model 2. The shape of this distribution also varies depending on many factors, such as the difference in the number of preditors in each model and whether or not these models are **nested** or **non-nested** (meaning, whether the set of predictors in model A is entirely a subset of the predictors in model B, or are there unique predictors in each model).\n",
     "\n",
-    "Without knowing the idealized shape of this null sampling distribution, it's hard to define a mathematical function that will allow us to calculate p-values exactly. Instead, a permutation test can help us approximate it. In this approach, we repeatedly simulate samples drawn from a reality where $\\Delta{adjR^2}$ = 0 (no difference in model performance). We then calculate what estimate of $\\Delta{adjR^2}$ each simulated sample makes, and plot a distribution from those. Finally, we find the 5% critical cutoff value in this simulated null sampling distribution and decide if our real $\\Delta{adjR^2}$ estimate is beyond this cut-off. \n",
+    "This is where model selection can get tricky. It's important to keep in mind that a goodness of fit metric like $R^2$ can be adjusted depending on number of parameters, but it's still just a point estimate for one dataset drawn from an unknown population. Below are brief descriptions of various methods people have developed to deal with this issue in different ways. We won't get into the weeds on these, but you're welcome to read about them more deeply yourself. \n",
     "\n",
-    "Let's walk through this step by step. First, remember from chapter 16 that permutation testing involves shuffling data around in a dataset so that any real association between a set of predictors and an outcome variable is broken and any remaining association is only due to chance. For instance, here is one instance of simulating a permuted sample:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "870d1baa",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#shuffling Y data \n",
-    "set.seed(47)\n",
-    "GSS_subset$shuffled_highschool <- sample(x=GSS_subset$highest_year_of_school_completed, \n",
-    "                                        size=length(GSS_subset$highest_year_of_school_completed), replace=FALSE)\n",
-    "\n",
-    "#performance of using unshuffled X vars to predict shuffled Y\n",
-    "shuffled_father_model <- lm(shuffled_highschool ~ highest_year_school_completed_father, \n",
-    "                            data = GSS_subset)\n",
-    "shuffled_full_model <- lm(shuffled_highschool ~ highest_year_school_completed_father + respondents_sex, \n",
-    "                            data = GSS_subset)\n",
-    "\n",
-    "summary(shuffled_father_model)$adj.r.squared\n",
-    "summary(shuffled_full_model)$adj.r.squared"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "59d3f82a",
-   "metadata": {},
-   "source": [
-    "These simulated $adjR^2$ values are much closer to 0 now and only due to sampling error. Further, $\\Delta{adjR^2}$ is really close to 0: "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0bb4064b",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "summary(shuffled_full_model)$adj.r.squared - summary(shuffled_father_model)$adj.r.squared"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "28daf0f7",
-   "metadata": {},
-   "source": [
-    "Let's repeat this shuffling process 1000 times so we can make a null sampling distribution of $\\Delta{R^2}$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d2245de1",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#creating an empty vector of 1000 spots\n",
-    "null_deltaR2 <- vector(length=1000)\n",
-    "\n",
-    "#generate 1000 unique shuffled samples, saving each Delta R2\n",
-    "set.seed(47)\n",
-    "for (i in 1:1000) {\n",
-    "    GSS_subset$shuffled_highschool <- sample(x=GSS_subset$highest_year_of_school_completed, \n",
-    "                                        size=length(GSS_subset$highest_year_of_school_completed), replace=FALSE)\n",
-    "    shuffled_father_model <- lm(shuffled_highschool ~ highest_year_school_completed_father, \n",
-    "                                data = GSS_subset)\n",
-    "    shuffled_full_model <- lm(shuffled_highschool ~ highest_year_school_completed_father + respondents_sex, \n",
-    "                            data = GSS_subset)\n",
-    "    null_deltaR2[i] <- summary(shuffled_full_model)$adj.r.squared - summary(shuffled_father_model)$adj.r.squared\n",
-    "}\n",
-    "\n",
-    "deltaR2_df <- data.frame(null_deltaR2)\n",
-    "gf_histogram( ~ null_deltaR2, data=deltaR2_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b962336d",
-   "metadata": {},
-   "source": [
-    "Looks like a one-tailed distribution happened, so to find the p-value of our real $\\Delta{adjR^2}$ in this null distribution, we calculate the percentage of the distribution that is bigger than this value:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2dc8dfba",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "realdeltaR2 <- summary(full_model)$adj.r.squared - summary(father_model)$adj.r.squared\n",
-    "paste0('real delta R2: ', realdeltaR2)\n",
-    "\n",
-    "num_above <- sum(null_deltaR2 > realdeltaR2)\n",
-    "\n",
-    "pvalue <- (num_above) / length(null_deltaR2)\n",
-    "\n",
-    "paste0('p-value: ', pvalue)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "00fdfdf5",
-   "metadata": {},
-   "source": [
-    "Since $\\Delta{adjR^2}$ has a p-value > 0.05 here, that means it is not significantly bigger than 0. In other words, the models perform similarly enough that we can't be sure one is better than the other in the population. We can just collect data about father's education level in our study and not waste budget on a longer survey.  \n",
-    "\n",
-    "Let's try this for a different situation, where we're curious about whether some predictor is significantly better than another in making predictions on its own. For example, maybe father's education is a better predictor than mother's education. If we use these in two separate models, we can do another permutation test on the difference between these model performances. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc31e4ad",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#creating an empty vector of 1000 spots\n",
-    "null_deltaR2 <- vector(length=1000)\n",
-    "\n",
-    "#generate 1000 unique shuffled samples, saving each Delta R2\n",
-    "set.seed(47)\n",
-    "for (i in 1:1000) {\n",
-    "    GSS_subset$shuffled_highschool <- sample(x=GSS_subset$highest_year_of_school_completed, \n",
-    "                                        size=length(GSS_subset$highest_year_of_school_completed), replace=FALSE)\n",
-    "    shuffled_father_model <- lm(shuffled_highschool ~ highest_year_school_completed_father, \n",
-    "                                data = GSS_subset)\n",
-    "    shuffled_mother_model <- lm(shuffled_highschool ~ highest_year_school_completed_mother, \n",
-    "                                data = GSS_subset)\n",
-    "    null_deltaR2[i] <- summary(shuffled_father_model)$adj.r.squared - summary(shuffled_mother_model)$adj.r.squared\n",
-    "}\n",
-    "\n",
-    "deltaR2_df <- data.frame(null_deltaR2)\n",
-    "gf_histogram( ~ null_deltaR2, data=deltaR2_df)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "03b322d1",
-   "metadata": {},
-   "source": [
-    "This distribution is two-tailed because both models have the same number of predictors, and sometimes ```shuffled_mother_model``` performs better, sometimes it performs worse. We didn't have to know this ahead of time though because the permutation test creates the null sampling distribution for us. We just now need to be aware that we need to do a two-tailed significance test for finding out if the difference in model performances in real data is significant. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b3c6edca",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "mother_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_mother, \n",
-    "                   data = GSS_subset)\n",
-    "\n",
-    "realdeltaR2 <- summary(father_model)$adj.r.squared - summary(mother_model)$adj.r.squared\n",
-    "paste0('real delta R2: ', realdeltaR2)\n",
-    "\n",
-    "num_above <- sum(null_deltaR2 > realdeltaR2)\n",
-    "num_below <- sum(null_deltaR2 < -realdeltaR2)\n",
-    "\n",
-    "pvalue <- (num_above + num_below) / length(null_deltaR2)\n",
-    "\n",
-    "paste0('p-value: ', pvalue)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "26263b9b",
-   "metadata": {},
-   "source": [
-    "This result is significant, meaning the $\\Delta{adjR^2}$ estimated in our study (for ```father_model``` - ```mother_model```) is unlikely to happen were ```father_model``` and ```mother_model``` equally performant in the population. We instead conclude that father's education is a better predictor of respondent's education attainment than mother's education. \n",
-    "\n",
-    "As previously mentioned, this is just one approach you could use to do model selection. It's very flexible for different situations, but it does involve a lot of coding. Some other common model selection methods include:\n",
-    "\n",
-    "- [An F-test](https://stats.libretexts.org/Bookshelves/Applied_Statistics/Learning_Statistics_with_R_-_A_tutorial_for_Psychology_Students_and_other_Beginners_(Navarro)/16%3A_Factorial_ANOVA/16.05%3A_The___F___test_as_a_model_comparison): In situations where you are comparing nested models, the null sampling distribution of the difference in model performances is well known and a p-value can be directly calculated. But this only works for nested models to decide whether a bigger one is significantly better than a smaller one. \n",
-    "- [Vuong Test](https://www.jstor.org/stable/1912557?seq=1): A generalized version of an F-test for finding significant differences in non-nested models, but the underlying math is more complex. The [```nonnest2``` package](https://cran.r-project.org/web/packages/nonnest2/vignettes/nonnest2.pdf) implements this in the function ```vuongtest()```. \n",
+    "- [The F-test](https://stats.libretexts.org/Bookshelves/Applied_Statistics/Learning_Statistics_with_R_-_A_tutorial_for_Psychology_Students_and_other_Beginners_(Navarro)/16%3A_Factorial_ANOVA/16.05%3A_The___F___test_as_a_model_comparison): In situations where you are comparing nested models, the null sampling distribution of the difference in model performances is well known and a p-value can be directly calculated. But this only works for nested models to decide whether a bigger one is significantly better than a smaller one. The function ```anova()``` in base R can compare two nested models this way. \n",
+    "- [Vuong Test](https://www.jstor.org/stable/1912557?seq=1): An extended version of an F-test for finding significant differences in non-nested models, but the underlying math is more complex. The [```nonnest2``` package](https://cran.r-project.org/web/packages/nonnest2/vignettes/nonnest2.pdf) implements this in the function ```vuongtest()``` for ease of use. However this test tends to be more conservative than an F-test and thus it can be harder to find true small differences in model performance. \n",
+    "- [Permutation testing](https://en.wikipedia.org/wiki/Permutation_test): Like we saw in chapter 16, permutation testing is a way to build a null sampling distribution through simulation. In this way we don't have to know the math for the idealized null sampling distribution function of $\\Delta{adjR^2}$, so this approach is very flexible for all sorts of modeling situations and data types. The downside is you have to write your own code for this, and the specificity of the calculated p-value depends on running many loops of the permutation test (10,000 is usually recommended for publication). \n",
     "- [Akaike Information Criterion (AIC)](https://www.scribbr.com/statistics/akaike-information-criterion/): This is a representation of the likelihood ratio that our data were generated by our specific model vs. the null model. When the AIC values for multiple models are compared, one can see which model has better likelihood against the null compared to another. Smaller values are better, but there is no associated p-value so whether some model is *significantly* better isn't addressed. Rules of thumb are that differences in AIC of 2 or more is meaningful, but one should also consider the interpretability of the models if the AIC values are close. \n",
-    "- [cross validation](https://ijlyttle.github.io/model_cv_selection.html): Used more commonly in prediction use cases for comparing many model specifications. It involves splitting a dataset up into a train and test set, refining a model in the train set, and then validating how it performs on \"unseen data\" in the test set. A lot of data are needed for this to go well.  "
+    "- [cross validation](https://ijlyttle.github.io/model_cv_selection.html): Used more commonly in prediction use cases for comparing many model specifications. It involves splitting a dataset up into a train and test set, comparing and choosing a model based on performance in the train set, and then validating how it performs on \"unseen data\" in the test set. A lot of data are needed for this to go well since you essentially need multiple datasets for testing and training.  "
    ]
   },
   {
