switch out sensitivity analysis for power analysis in ch18

--- a/chapter-18.ipynb
+++ b/chapter-18.ipynb
@@ -493,7 +493,7 @@
     "\n",
     "If you know three of these values, you can compute the fourth. \n",
     "\n",
-    "One version of power planning is called **sensitivity analysis**. It asks, given a chosen Type I error rate and sample size, what is the smallest effect size you are well-powered to find.\n",
+    "One version of power planning is called a **power analysis**. It asks, given a chosen Type I error rate and sample size, what power do you have to detect a minimum effect size of interest. Typically in psychology, we want at least 80% power. \n",
     "\n",
     "A good tool for doing power planning is the ```pwr``` package in R. With it, you can enter three of the four values above, and it will tell you the fourth. Let's use the ```pwr.r.test()``` function in that package for an analysis where we plan to find a correlation between two variables (a quantitative outcome and one quantitative predictor). This function has four arguments: \n",
     "\n",
@@ -504,24 +504,59 @@
     "\n",
     "To use this function, three out of four of these arguments must be set with a value, and the fourth one assigned a value of ```NULL```. Whichever value is set to ```NULL``` will be computed based on the other three. \n",
     "\n",
-    "If we use a Type I error rate of 5%, a sample size of 50, and want to have at least 80% power (the modern standard of power for research studies), what is the smallest $r$ correlation that we will have an 80% chance of finding? "
+    "If we use a Type I error rate of 5%, a sample size of 50, and think we are interested in a correlation effect size $r = 0.4$, what percentage chance do we have to find that as significant? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2ab85f7a",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into '/Library/Frameworks/R.framework/Versions/4.3-arm64'\n",
+      "(as 'lib' is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmp4iDznH/downloaded_packages\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "     approximate correlation power calculation (arctangh transformation) \n",
+       "\n",
+       "              n = 50\n",
+       "              r = 0.4\n",
+       "      sig.level = 0.05\n",
+       "          power = 0.8339055\n",
+       "    alternative = two.sided\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "install.packages(\"pwr\")\n",
     "library(pwr)\n",
     "\n",
-    "pwr.r.test(n=50, r=NULL, sig.level=0.05, power=0.8)"
+    "pwr.r.test(n=50, r=0.4, sig.level=0.05, power=NULL)"
    ]
   },
   {
@@ -529,9 +564,9 @@
    "id": "fad0d1e7",
    "metadata": {},
    "source": [
-    "The result of this sensitivity analysis says that, with a sample size of 50 and Type I error rate of 5%, we have 80% power to detect an effect as small as r=0.38. If the true effect in the population is smaller than that, we are underpowered to detect it. \n",
+    "The result of this power analysis says that, with a sample size of 50 and Type I error rate of 5%, we have 83% power to detect an effect as small as r=0.4. That's good enough for us to trust that in running such a study, we could find that effect as significant if it exists.  If the true effect in the population is smaller than that, or we had a smaller sample size, we would be underpowered to detect it. \n",
     "\n",
-    "Now use the ```pwr.r.test()``` function yourself to run a sensitivity analysis for a study with n=80, significance level 0.05, and power level of 0.8."
+    "Now use the ```pwr.r.test()``` function yourself to run a power analysis for a study with n=50, significance level 0.05, and correlation effect size 0.2. Are we well-powered or underpowered to find a small effect like this with such a study? "
    ]
   },
   {
@@ -649,15 +684,13 @@
     "\n",
     "In fact all these effect sizes can be converted into each other, since they're all ultimately built on sum of squares. The website [escal.site](https://www.escal.site/) has a handy webapp for computing all these different effect sizes from the others (note that it uses Cohen's $f$ instead of $f^2$).\n",
     "\n",
-    "A big question for power planning is what sort of effect size should we plan for? If a sensitivity analysis says we can detect down to $r=0.38$, is that a good thing or do we need to power for something lower? \n",
+    "A big question for power planning is what sort of effect size should we plan for? This sort of question could be answered two ways. One, what is the smallest effect size that would matter to you? What do you consider to be a meaningful effect, and what would be too trivial to care about? This is called your smallest effect size of interest. You could use Cohen's rules of thumb for this, or your own expertise in the research domain for what kind of effect size is worth the trouble of an intervention.\n",
     "\n",
-    "This sort of question could be answered two ways. One, what is the smallest effect size that would matter to you? What do you consider to be a meaningful effect, and what would be too trivial to deal with? This is called your smallest effect size of interest. You could use Cohen's rules of thumb for this, or your own expertise in the research domain for what kind of effect size is worth the trouble of an intervention.\n",
-    "\n",
-    "The second way to answer this is, what effect sizes have other researchers found in related studies? You might expect your effect size to be similar to theirs, so you can power plan with that sort of effect size in mind. \n",
+    "The second way to answer this is, what effect sizes have other researchers found in related studies? You might expect your effect size to be similar to theirs, so you can power plan with that sort of effect size in mind. Though beware, because of the file-drawer problem, the average of published effect sizes may be bigger than the true effect in the population.  \n",
     "\n",
     "If you don't have an idea about a smallest effect size of interest and there isn't a guide from prior research about what you should expect, you can run a pilot study to collect some data and estimate an effect size. A pilot study generally has few data points and thus unstable estimates, but here you're not worried about a significant effect yet. You can find the confidence interval of an estimate in this pilot study, perhaps choose an effect value that is on the lower end of that interval, and then power plan for a full study with that effect size as a target. \n",
     "\n",
-    "Other times you might not have the luxury to collect a large sample size because you are constrained by resources such as funding or time. In that case, it's good to run a sensitivity analysis to see what is the minimal effect size you would be able to detect with your available sample size. By comparing that minimally viable effect size to similar effects in the literature or your professional judgment, you can decide if it is reasonable to expect you will find a significant effect or not, and thus maybe this study would be a waste of resources or not. "
+    "Sometimes you might not have the luxury to collect a large sample size because you are constrained by resources such as funding or time. In that case, it's good to run a power analysis to see what power you would have to find a certain effect size with your available sample size. Depending on the answer, you can decide if it is reasonable to expect you will find a significant effect or not, and thus maybe this study would be a waste of resources or not. "
    ]
   },
   {
