--- a/chapter-17.ipynb
+++ b/chapter-17.ipynb
@@ -398,14 +398,14 @@
    "source": [
     "#Fit a linear model predicting highest_year_of_school_completed with just highest_year_school_completed_father\n",
     "#in GSS_subset\n",
-    "father_model <- #YOUR CODE HERE\n",
+    "father_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father, data = GSS_subset)#YOUR CODE HERE\n",
     "\n",
     "summary(father_model)\n",
     "\n",
     "\n",
     "#Fit a linear model predicting highest_year_of_school_completed with highest_year_school_completed_father\n",
     "# and respondents_sex\n",
-    "full_model <- #YOUR CODE HERE\n",
+    "full_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father + respondents_sex, data = GSS_subset)#YOUR CODE HERE\n",
     "\n",
     "summary(full_model)\n"
    ]
@@ -492,7 +492,7 @@
    "id": "97a550e8",
    "metadata": {},
    "source": [
-    "This function outputs a table for every model compared to the first model given in the arguments list (you can enter as many models to compare as you want). For our purposes, look at the 'LR' column and the 'p(LR)' column. LR stands for \"likelihood ratio\", a statistic being computed for the model comparison. This is somewhat like an F statistic for a predictor vs. null model (but it doesn't use the F distribution). If this number is negative, then the first model in the pairwise comparison has better performance. If this number is positive, then the second model in the pairwise comparison has better performance. p(LR) tells us the p-value of this comparison to know if either model is *significantly* better than the other.  "
+    "This function outputs a table for every model compared to the first model given in the arguments list (you can enter as many models to compare as you want). In this case, that is ```father_model```. For our purposes, look at the 'LR' column and the 'p(LR)' column. LR stands for \"likelihood ratio\", a statistic being computed for the model comparison. This is somewhat like an F statistic for a predictor vs. null model (but it doesn't use the F distribution). If this number is negative, then the first model in the pairwise comparison has better performance. If this number is positive, then the second model in the pairwise comparison has better performance. p(LR) tells us the p-value of this comparison to know if either model is *significantly* better than the other.  "
    ]
   },
   {
