remove bayesian chapter, make it an optional chapter, give brief mention of bayesian approach in ch16

--- a/chapter-11.ipynb
+++ b/chapter-11.ipynb
@@ -571,7 +571,7 @@
     "\n",
     "### One-sample t-test\n",
     "\n",
-    "The **one-sample t-test** is a tool to evaluate whether the mean of one sample is *significantly different* than a particular number. We have not covered the logic of *statistical significance* yet - we will get to it later in the course. But a quick understanding of it right now for the purpose of the t-test is that this tool is asking the probability of whether a distribution of data in a sample was taken from a population where the true mean *&mu;* is a particular value.  \n",
+    "The one-sample t-test is a tool to evaluate whether the mean of one sample is *significantly different* than a particular number. We have not covered the logic of *statistical significance* yet - we will get to it later in the course. But a quick understanding of it right now for the purpose of the t-test is that this tool is asking the probability of whether a distribution of data in a sample was taken from a population where the true mean *&mu;* is a particular value.  \n",
     "\n",
     "A t-test outputs a coefficient, known as a *t-value*. This coefficient can be calculated as:\n",
     "\n",
@@ -579,33 +579,11 @@
     "\n",
     "Where $\\bar{X}$ is the mean of a data sample, $\\mu$ is some hypothesized population mean, $s$ is the standard deviation of the sample, and $n$ is the sample size. $\\mu$ is a hypothesized *population* mean, hence why it is written with the Greek letter $\\mu$. Often, this hypothesized population mean is 0 (but not always). The t-test thus measures how far away the mean of a sample is from 0, and whether that's exceptional or not considering the spread of the distribution. The bigger the t-value, the more unlikely it is that a population with mean 0 created this sample, and thus the more certain we are that some other population did instead. \n",
     "\n",
-    "In R, to run a one-sample t-test, simply use the ```t.test()``` function on an outcome variable vector. \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c93c718a",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "t.test(studentdata$Thumb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42c06105",
-   "metadata": {},
-   "source": [
     "A t-value isn't the same thing as any value in our general linear model, but is based on the difference between the Grand Mean and a hypothesized population mean. Because of this you can use $b_0$ in the null form of the General Linear Model for a similar purpose. In this approach, we could ask whether setting $b_0$ to the mean of our sample makes better predictions than setting $b_0$ to 0. Thus if you encounter one-sample t-tests in the wild, just think of using the null form of the general linear model for the same purpose. \n",
     "\n",
     "### Independent samples t-test\n",
     "\n",
-    "A related type of t-test compares the means of two samples to each other to ask whether we think the same underlying population created them, or not. The computation for an **independent-samples t-test** is:\n",
+    "A related type of t-test compares the means of two samples to each other to ask whether we think the same underlying population created them, or not. The computation for an independent-samples t-test is:\n",
     "\n",
     "$$ t_{independent} = \\frac{\\bar{X}_1 - \\bar{X}_2}{s_p\\sqrt{\\frac{1}{n_1} + \\frac{1}{n_2}}} $$\n",
     "\n",
@@ -615,31 +593,6 @@
     "\n",
     "The independent samples t-test asks whether two groups are likely from the same population. These two groups are usually split based on an explanatory variable - e.g., the thumb lengths of females in our study would be one group, and the thumb lengths of males would be another one. Once separated, those distributions are compared to each other. If an independent samples t-test value is large, it is unlikely that both groups came from the same population.\n",
     "\n",
-    "An independent samples t-test is performed in R by creating separate vector objects for the separate groups to compare, putting both in the ```t.test()``` function, and including a ```var.equal=TRUE``` argument to specify using the pooled standard deviation."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0560ec05",
-   "metadata": {
-    "vscode": {
-     "languageId": "r"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "males <- studentdata$Thumb[studentdata$Sex=='Male']\n",
-    "females <- studentdata$Thumb[studentdata$Sex=='Female']\n",
-    "\n",
-    "t.test(males, females, var.equal=TRUE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8591155b",
-   "metadata": {},
-   "source": [
     "In the general linear model, we can achieve a similar goal by looking at the value of $b_1$ in a predictor model. If $b_1$ is large, that means there is a large difference between female and male group means - we'd make substantially different predictions for someone who is female compared to someone who is male. If $b_1$ is small, there is not much difference between the two groups (and perhaps the small difference is only there by random chance). "
    ]
   },
@@ -669,13 +622,7 @@
     "- **dummy variable**: A predictor variable in a model that has been converted to Boolean in order to be useful for mathematical calculation. Meant to represent categorical membership (i.e. 1=in some category, 0=not in this category).\n",
     "- **parsimony**: A statistical model is parsimonious if it is simple with relatively few predictor variables. Parsimonious models explain less error in a data sample but have a better chance at generalizing to other samples. \n",
     "- **degrees of freedom**: The number of values in a data sample that are free to vary after the calculation of some statistic(s). In general the degrees of freedom for a dataset are N-k, where N is the sample size and k is the number of parameters calculated on the dataset.  \n",
-    "- **proportional reduction in error**: The proportion of variation in an outcome variable that a statistical model is able to explain. \n",
-    "- **one-sample t-test**: A statistical tool that asks whether some data sample likely came from a population of a particular $\\mu$ value.\n",
-    "- **independent samples t-test**: A statistical tool that asks whether two groups of data likely came from the same underlying population. \n",
-    "\n",
-    "## New R functionality\n",
-    "\n",
-    "- [t.test()](https://www.rdocumentation.org/packages/stats/versions/3.6.2/topics/t.test)"
+    "- **proportional reduction in error**: The proportion of variation in an outcome variable that a statistical model is able to explain.  "
    ]
   },
   {
