--- a/chapter-13.ipynb
+++ b/chapter-13.ipynb
@@ -1073,7 +1073,7 @@
    "source": [
     "## 13.11 Historical note - ANOVA test\n",
     "\n",
-    "Just as t-tests were traditionally used to do similar things to the null model and two-group model, another historical class of statistical tests is called **ANOVA tests**. This is actually where the ANOVA name comes from for the table we've been using.\n",
+    "Just as t-tests were traditionally used to do similar things to the null model and two-group model, another historical class of statistical tests is called ANOVA tests. This is actually where the ANOVA name comes from for the table we've been using.\n",
     "\n",
     "ANOVAs work by comparing the amount of variation *within* a subgroup of data to the amount of variance *between* different subgroups of data. In the example we worked with earlier for predicting ```highest_year_of_school_completed``` with ```race_of_respondent```, an ANOVA test would compare the differences in education among people within each racial group to the differences in education among people of different racial groups. It then asks how statistically likely it is that data of different groups actually come from the same distribution. These are typically done with categorical predictor variables, but some versions include a mixed-predictor approach. Below is a summary of two common types of ANOVA: \n",
     "\n",
@@ -1111,7 +1111,6 @@
     "- **overfitting** - When a complex model is built that explains variation well in one dataset, but does not generalize to other new datasets, it has been overfit to the training data.\n",
     "- **confound** - A third variable that explains both a theorized predictor and outcome variable. \n",
     "- **statistical control** - The process of removing variance attributable to a confound so that the unique effect of a theorized predictor on an outcome can be identified. \n",
-    "- **ANOVA test** - A statistical tool that compares within vs. between group variance for multiple subgroups of data in order to ask whether the groups likely came from the same population or not. \n",
     "\n",
     "## New R functionality\n",
     "- [dplyr::slice_sample()](https://dplyr.tidyverse.org/reference/slice.html)"
