--- a/chapter-17.ipynb
+++ b/chapter-17.ipynb
@@ -398,14 +398,14 @@
    "source": [
     "#Fit a linear model predicting highest_year_of_school_completed with just highest_year_school_completed_father\n",
     "#in GSS_subset\n",
-    "father_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father, data = GSS_subset)#YOUR CODE HERE\n",
+    "father_model <- #YOUR CODE HERE\n",
     "\n",
     "summary(father_model)\n",
     "\n",
     "\n",
     "#Fit a linear model predicting highest_year_of_school_completed with highest_year_school_completed_father\n",
     "# and respondents_sex\n",
-    "full_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father + respondents_sex, data = GSS_subset)#YOUR CODE HERE\n",
+    "full_model <- #YOUR CODE HERE\n",
     "\n",
     "summary(full_model)\n"
    ]
